# deprecated-demo.sphinx

./: README.md  pyproject.toml  setup.cfg
docs/source/: api.rst  conf.py  deprecated_demo.rst  deprecated_demo.sphinx.calc_mean.rst  deprecated_demo.sphinx.calc_mean_deco.rst  deprecated_demo.sphinx.invalid_usages.rst  deprecated_demo.sphinx.rst  deprecated_demo.sphinx.sphinx_demo.rst  deprecated_demo.sphinx.use_calc_mean_deco.rst  index.rst
docs/source/_static/: custom.css
src/deprecated_demo/sphinx/: __init__.py  calc_mean.py  calc_mean_deco.py  invalid_usages.py  sphinx_demo.py  use_calc_mean_deco.py
