[metadata]
name = deprecated-demo.sphinx
version = 21.0.0
url = https://github.com/tantale/deprecated-demo.sphinx
description = Demonstration application to show Sphinx directives in deprecated functions
long_description = file: README.md
long_description_content_type = txt/markdown
keywords = Documentation, Sphinx, Deprecated, Demonstration, decorator, directive, docstring
author = Laurent LAPORTE
author_email = tantale.solutions@gmail.com
platforms = any
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Documentation
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = True
include_package_data = True
packages = deprecated_demo.sphinx
package_dir =
    =src
install_requires =
    deprecated
python_requires = <4,>=3.6

[options.extras_require]
docs = Sphinx


[build_sphinx]
source-dir = docs/source
build-dir = dist/docs
